src/components/sections/article/article.module.css
.sectionWrapperRow {
  max-width: 1000px;
  margin: auto;
  padding: 5rem 1rem;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 1.5rem;

  @media (min-width: 1024px) {
    padding: 7.5rem 12rem;
  }

  @media (min-width: 640px) {
    padding: 6rem;
    flex-direction: var(--image-position, row);
  }

  & h3 {
    color: var(--Teal, #018852);
  }
}

.image {
  width: 100%;
  flex: 1;
  max-width: 340px;
  align-self: center;
}

.iframe {
  border-radius: 8px;
  background-color: white;
  width: 80vw;
  max-width: 450px;
  max-height: 730px;
  height: 248vw; /* taller on mobile */
  padding: 1rem;

  @media (min-width: 640px) {
    width: 90vw;
  }

  & iframe {
    border: none;
  }
}

.list {
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  align-items: flex-start;
  flex-wrap: wrap;

  @media (min-width: 1024px) {
    display: flex;
    flex-direction: row;
  }

  @media (max-width: 1024px) {
    & > li {
      width: 100%;
    }
  }
}

.content {
  flex: 1;
  min-width: 0;
  display: flex;
  flex-direction: column;
  gap: var(--Spacing-M);

  @media (min-width: 640px) {
    gap: var(--Spacing-L);
    align-self: center;
  }
}

